--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -61,18 +61,15 @@ section {
 .sec1 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: blue;
 }
 
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: red;
 }
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: green;
 }
 .sec4 {
   display: none;
@@ -85,6 +82,15 @@ section {
 
 .active{
     display: block;
+    animation: scaleAnim 1s ease-in-out;
+    @keyframes scaleAnim {
+      0%{
+        transform: translateY(-100%) scaleY(0);
+      }
+      100%{
+        transform: translateY(0) scaleY(1);
+      }
+    }
 }
 
 //controls
@@ -121,6 +127,110 @@ section {
         font-size: 1.2rem;
         color: var(--color-grey-2);
         pointer-events: none;
+    }
+  }
+}
+
+// Header content
+.header-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  min-height: 100vh;
+  .left-header {
+      display: flex;
+      align-items: center;
+      position: relative;
+      .h-shape {
+          transition: all .4s ease-in-out;
+          width: 65%;
+          height: 100%;
+          background-color: var(--color-secondary);
+          position: absolute;
+          left: 0;
+          top: 0;
+          z-index: -1;
+          clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+      }
+      .image {
+          border-radius:14px;
+          height: 90%;
+          width: 68%;
+          margin-left: 4rem;
+          background-color: var(--color-black);
+          transition: all .4s ease-in-out;
+          img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              transition: all .4s ease-in-out;
+              border-radius: 14px;
+              filter: grayscale(100%);
+              &:hover{
+                  filter: grayscale(0);
+              }
+          }
+      }
+  }
+
+  .right-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 12rem;
+    .name{
+      font-size: 2rem;
+      span{
+        color: var(--color-secondary);
+      }
+    }
+    p{
+      margin: 1.5rem 0;
+      line-height: 2rem;
+    }
+  }
+}
+// Indipendent components
+.btn-container{
+  display: flex;
+  align-self: flex-start;
+}
+.main-btn{
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  .btn-text{
+    padding: 0 2rem;
+  }
+  .btn-icon{
+    background-color: var(--color-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 1rem;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: all .4s ease-in-out;
+    z-index: -1;
+  }
+  &:hover{
+    &::before{
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      transform: translateX(0);
     }
   }
 }
