about me done  + portfolio init

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,7 +18,8 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
-  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3)
+  --box-shadow-1: 1px 2px 15px rgba(0, 0, 0, 0.1);
+  --box-shadow-2: 1px 4px 15px rgba(0, 0, 0, 0.32);
   --br-sm-2: 14px;
 }
 
@@ -80,17 +81,18 @@ section {
   transform: translateY(0) scale(1);
 }
 
-.active{
-    display: block;
-    animation: scaleAnim 1s ease-in-out;
-    @keyframes scaleAnim {
-      0%{
-        transform: translateY(-100%) scaleY(0);
-      }
-      100%{
-        transform: translateY(0) scaleY(1);
-      }
+.active {
+  display: block;
+  animation: appear 1s ease-in-out;
+  transform: translateY(0) scaleY(1);
+  @keyframes appear {
+    0% {
+      transform: translateY(-100%) scaleY(0);
     }
+    100% {
+      transform: translateY(0) scaleY(1);
+    }
+  }
 }
 
 //controls
@@ -104,11 +106,11 @@ section {
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
-  .active-btn{
+  .active-btn {
     background-color: var(--color-secondary) !important;
-    transition: all .4s ease-in-out;
-    i{
-        color: var(--color-white) !important;
+    transition: all 0.4s ease-in-out;
+    i {
+      color: var(--color-white) !important;
     }
   }
   .control {
@@ -121,12 +123,12 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: .7rem 0;
+    margin: 0.7rem 0;
     box-shadow: var(--box-shadow-1);
-    i{
-        font-size: 1.2rem;
-        color: var(--color-grey-2);
-        pointer-events: none;
+    i {
+      font-size: 1.2rem;
+      color: var(--color-grey-2);
+      pointer-events: none;
     }
   }
 }
@@ -137,64 +139,335 @@ section {
   grid-template-columns: repeat(2, 1fr);
   min-height: 100vh;
   .left-header {
-      display: flex;
-      align-items: center;
-      position: relative;
-      .h-shape {
-          transition: all .4s ease-in-out;
-          width: 65%;
-          height: 100%;
-          background-color: var(--color-secondary);
-          position: absolute;
-          left: 0;
-          top: 0;
-          z-index: -1;
-          clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+    display: flex;
+    align-items: center;
+    position: relative;
+    .h-shape {
+      transition: all 0.4s ease-in-out;
+      width: 65%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+    }
+    .image {
+      border-radius: 14px;
+      height: 90%;
+      width: 68%;
+      margin-left: 4rem;
+      background-color: var(--color-black);
+      transition: all 0.4s ease-in-out;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 0.4s ease-in-out;
+        border-radius: 14px;
+        filter: grayscale(100%);
+        &:hover {
+          filter: grayscale(0);
+        }
       }
-      .image {
-          border-radius:14px;
-          height: 90%;
-          width: 68%;
-          margin-left: 4rem;
-          background-color: var(--color-black);
-          transition: all .4s ease-in-out;
-          img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              transition: all .4s ease-in-out;
-              border-radius: 14px;
-              filter: grayscale(100%);
-              &:hover{
-                  filter: grayscale(0);
-              }
-          }
-      }
+    }
   }
 
-  .right-header{
+  .right-header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-right: 12rem;
-    .name{
+    .name {
       font-size: 2rem;
-      span{
+      span {
         color: var(--color-secondary);
       }
     }
-    p{
+    p {
       margin: 1.5rem 0;
       line-height: 2rem;
     }
   }
 }
-// Indipendent components
-.btn-container{
+
+//About
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+  .right-about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    .about-item {
+      border: 1px solid var(--color-grey-5);
+      border-radius: 5px;
+      transition: all 0.4s ease-in-out;
+      box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+      &:hover {
+        cursor: default;
+        transform: translateY(-5px);
+        border: 1px solid var(--color-secondary);
+        box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+      }
+      .about-text {
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        .large-text {
+          font-size: 3rem;
+          font-weight: 700;
+          color: var(--color-secondary);
+        }
+        .small-text {
+          padding-left: 3rem;
+          position: relative;
+          text-transform: uppercase;
+          font-size: 1.2rem;
+          color: var(--color-grey-1);
+          letter-spacing: 2px;
+          &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 15px;
+            width: 2rem;
+            height: 2px;
+            background-color: var(--color-grey-5);
+          }
+        }
+      }
+    }
+  }
+  .left-about {
+    padding-right: 5rem;
+    p {
+      line-height: 2rem;
+      padding: 1rem;
+      color: var(--color-grey-1);
+    }
+    h4 {
+      font-size: 2rem;
+      text-transform: uppercase;
+    }
+  }
+}
+
+.about-stats {
+  padding-bottom: 4rem;
+  .progress-bars {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    .progress-bar {
+      display: flex;
+      flex-direction: column;
+      .prog-title {
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+      .progress-con {
+        display: flex;
+        align-items: center;
+        .prog-text {
+          color: var(--color-grey-2);
+        }
+        .progress {
+          width: 100%;
+          height: 0.45rem;
+          background-color: var(--color-grey-4);
+          margin-left: 1rem;
+          position: relative;
+          span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            background-color: var(--color-secondary);
+            transition: all 0.4s ease-in-out;
+            width: 60%;
+          }
+          .html {
+            width: 80%;
+          }
+          .css {
+            width: 95%;
+          }
+          .js {
+            width: 75%;
+          }
+          .react {
+            width: 60%;
+          }
+          .node {
+            width: 87%;
+          }
+          .python {
+            width: 70%;
+          }
+        }
+      }
+    }
+  }
+}
+
+.stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 0;
+    width: 40%;
+    height: 1px;
+    background-color: var(--color-grey-5);
+    transform: translateX(-50%);
+  }
+}
+
+//timeline
+
+.timeline {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+  .timeline-item {
+    position: relative;
+    padding-left: 3rem;
+    border-left: 1px solid var(--color-grey-5);
+    .tl-icon {
+      position: absolute;
+      left: -27px;
+      top: 0;
+      background-color: var(--color-secondary);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        font-size: 1.3rem;
+      }
+    }
+    .tl-duration {
+      padding: 0.2rem 0.6rem;
+      background-color: var(--color-grey-5);
+      border-radius: 15px;
+      display: inline-block;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+    h5 {
+      padding: 1rem 0;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      font-weight: 600;
+      span {
+        color: var(--color-grey-2);
+        font-weight: 500;
+        font-size: 1.2rem;
+      }
+    }
+    p {
+      color: var(--color-grey-2);
+    }
+  }
+}
+
+//portfolios
+.port-text {
+  padding: 2rem 0;
+  text-align: center;
+}
+.portfolios {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .portfolio-item {
+    position: relative;
+    border-radius: 15px;
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 15px;
+    }
+    .hover-items {
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      position: absolute;
+      left: 0;
+      top: 0;
+      border-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      opacity: 0;
+      transform: scale(0);
+      transition: all 0.4s ease-in-out;
+      h3 {
+        font-size: 1.5rem;
+        margin-bottom: 1.5rem;
+        color: var(--color-white);
+      }
+      .icons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .icon {
+          background-color: var(--color-primary);
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0 1rem;
+          cursor: pointer;
+          transition: all 0.4s ease-in-out;
+
+          i {
+            font-size: 1.5rem;
+            color: var(--color-white);
+            margin: 0 1rem;
+          }
+          &:hover {
+            background-color: var(--color-white);
+            i {
+              color: var(--color-primary);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.portfolio-item:hover .hover-items {
+  opacity: 1;
+  transform: scale(1);
+}
+// Indipendent components //
+
+//btn
+.btn-container {
   display: flex;
   align-self: flex-start;
 }
-.main-btn{
+.main-btn {
   border-radius: 30px;
   color: inherit;
   font-weight: 600;
@@ -205,10 +478,10 @@ section {
   display: flex;
   align-items: center;
   overflow: hidden;
-  .btn-text{
+  .btn-text {
     padding: 0 2rem;
   }
-  .btn-icon{
+  .btn-icon {
     background-color: var(--color-secondary);
     display: flex;
     align-items: center;
@@ -216,21 +489,46 @@ section {
     border-radius: 50%;
     padding: 1rem;
   }
-  &::before{
-    content: '';
+  &::before {
+    content: "";
     position: absolute;
     top: 0;
     right: 0;
     transform: translateX(100%);
-    transition: all .4s ease-in-out;
+    transition: all 0.4s ease-in-out;
     z-index: -1;
   }
-  &:hover{
-    &::before{
+  &:hover {
+    &::before {
       width: 100%;
       height: 100%;
       background-color: var(--color-secondary);
       transform: translateX(0);
+    }
+  }
+}
+
+//title
+.main-title {
+  text-align: center;
+  h2 {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 4rem;
+    font-weight: 700;
+    span {
+      color: var(--color-secondary);
+    }
+    .bg-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: var(--color-grey-5);
+      transition: all 0.4s ease-in-out;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      font-weight: 800;
+      font-size: 5.3rem;
     }
   }
 }
