--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,6 +20,7 @@
   --color-grey-6: #12181b;
   --box-shadow-1: 1px 2px 15px rgba(0, 0, 0, 0.1);
   --box-shadow-2: 1px 4px 15px rgba(0, 0, 0, 0.32);
+  --box-shadow-3: 1px 4px 20px rgba(0, 0, 0, 0.8);
   --br-sm-2: 14px;
 }
 
@@ -314,6 +315,61 @@ section {
   }
 }
 
+//blogs
+
+//Blogs Section
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .blog {
+    position: relative;
+    background-color: var(--color-grey-5);
+    border-radius: 5px;
+    box-shadow: var(--box-shadow-1);
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      box-shadow: var(--box-shadow-2);
+      transform: translateY(-5px);
+      transition: all 0.4s ease-in-out;
+      img {
+        filter: grayscale(0);
+        transform: scale(1.1);
+        box-shadow: var(--box-shadow-3);
+      }
+    }
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      filter: grayscale(100%);
+      transition: all 0.4s ease-in-out;
+    }
+    .blog-text {
+      margin-top: -7px;
+      padding: 1.1rem;
+      border-top: 8px solid var(--color-secondary);
+      h4 {
+        font-size: 1.5rem;
+        margin-bottom: 0.7rem;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+        &:hover {
+          color: var(--color-secondary);
+        }
+      }
+      p {
+        color: var(--color-grey-2);
+        line-height: 2rem;
+        padding-bottom: 1rem;
+      }
+    }
+  }
+}
+
 .stat-title {
   text-transform: uppercase;
   font-size: 1.4rem;
@@ -528,7 +584,7 @@ section {
       z-index: -1;
       transform: translate(-50%, -50%);
       font-weight: 800;
-      font-size: 5.3rem;
+      font-size: 4.8rem;
     }
   }
 }
