--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,23 +5,34 @@
   list-style: none;
 }
 
-// variables
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #27ae60;
+  --color-secondary: #56c8ea;
   --color-white: #ffffff;
   --color-black: #000;
-  --color-grey-0: #f8f8f8;
+  --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
   --color-grey-2: #b2becd;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
-  --box-shadow-1: 1px 2px 15px rgba(0, 0, 0, 0.1);
-  --box-shadow-2: 1px 4px 15px rgba(0, 0, 0, 0.32);
-  --box-shadow-3: 1px 4px 20px rgba(0, 0, 0, 0.8);
   --br-sm-2: 14px;
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
+}
+
+.light-mode {
+  --color-primary: #ffffff;
+  --color-secondary: #00678c;
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
 }
 
 body {
@@ -40,9 +51,10 @@ a {
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
   color: var(--color-white);
   overflow: hidden;
+  padding: 0 !important;
 }
 
 section {
@@ -54,32 +66,11 @@ section {
   padding: 3rem 18rem;
 }
 
-.section {
+.container {
+  display: none;
   transform: translateY(-100%) scale(0);
   transition: all 0.4s ease-in-out;
   background-color: var(--color-primary);
-}
-
-.sec1 {
-  display: none;
-  transform: translateY(0) scale(1);
-}
-
-.sec2 {
-  display: none;
-  transform: translateY(0) scale(1);
-}
-.sec3 {
-  display: none;
-  transform: translateY(0) scale(1);
-}
-.sec4 {
-  display: none;
-  transform: translateY(0) scale(1);
-}
-.sec5 {
-  display: none;
-  transform: translateY(0) scale(1);
 }
 
 .active {
@@ -96,7 +87,7 @@ section {
   }
 }
 
-//controls
+//Controls
 .controls {
   position: fixed;
   z-index: 10;
@@ -107,23 +98,16 @@ section {
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
-  .active-btn {
-    background-color: var(--color-secondary) !important;
-    transition: all 0.4s ease-in-out;
-    i {
-      color: var(--color-white) !important;
-    }
-  }
   .control {
     padding: 1rem;
     cursor: pointer;
     background-color: var(--color-grey-4);
-    height: 55px;
     width: 55px;
+    height: 55px;
     border-radius: 50%;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     margin: 0.7rem 0;
     box-shadow: var(--box-shadow-1);
     i {
@@ -132,9 +116,40 @@ section {
       pointer-events: none;
     }
   }
+  .active-btn {
+    background-color: var(--color-secondary);
+    transition: all 0.4s ease-in-out;
+    i {
+      color: var(--color-white);
+    }
+  }
 }
 
-// Header content
+.theme-btn {
+  top: 5%;
+  right: 3%;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: var(--color-grey-4);
+  cursor: pointer;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
+  transition: all 0.1s ease-in-out;
+  &:active {
+    transform: translateY(-3px);
+  }
+  i {
+    font-size: 1.4rem;
+    color: var(--color-grey-2);
+    pointer-events: none;
+  }
+}
+
+/*Header-content*/
 .header-content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -155,7 +170,7 @@ section {
       clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
     }
     .image {
-      border-radius: 14px;
+      border-radius: var(--br-sm-2);
       height: 90%;
       width: 68%;
       margin-left: 4rem;
@@ -166,7 +181,6 @@ section {
         height: 100%;
         object-fit: cover;
         transition: all 0.4s ease-in-out;
-        border-radius: 14px;
         filter: grayscale(100%);
         &:hover {
           filter: grayscale(0);
@@ -179,7 +193,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-right: 12rem;
+    padding-right: 14rem;
     .name {
       font-size: 2rem;
       span {
@@ -193,36 +207,43 @@ section {
   }
 }
 
-//About
+/*About*/
 .about-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex; // Cambiato da grid a flex
   padding-top: 3.5rem;
   padding-bottom: 5rem;
+
   .right-about {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
+    flex: 1; // Aggiunto per far espandere la colonna a destra
+    display: flex;
+    flex-wrap: wrap; // Aggiunto per far andare gli elementi in righe successive se necessario
+    gap: 2rem;
+
     .about-item {
+      flex: 1; // Aggiunto per far espandere gli elementi
       border: 1px solid var(--color-grey-5);
       border-radius: 5px;
       transition: all 0.4s ease-in-out;
       box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+
       &:hover {
         cursor: default;
         transform: translateY(-5px);
         border: 1px solid var(--color-secondary);
         box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
       }
-      .about-text {
+
+      .abt-text {
         padding: 1.5rem;
         display: flex;
         flex-direction: column;
+
         .large-text {
           font-size: 3rem;
           font-weight: 700;
           color: var(--color-secondary);
         }
+
         .small-text {
           padding-left: 3rem;
           position: relative;
@@ -230,6 +251,7 @@ section {
           font-size: 1.2rem;
           color: var(--color-grey-1);
           letter-spacing: 2px;
+
           &::before {
             content: "";
             position: absolute;
@@ -243,13 +265,17 @@ section {
       }
     }
   }
+
   .left-about {
+    flex: 1; // Aggiunto per far espandere la colonna a sinistra
     padding-right: 5rem;
+
     p {
       line-height: 2rem;
       padding: 1rem;
       color: var(--color-grey-1);
     }
+
     h4 {
       font-size: 2rem;
       text-transform: uppercase;
@@ -314,62 +340,6 @@ section {
     }
   }
 }
-
-//blogs
-
-//Blogs Section
-.blogs {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
-  margin-top: 3rem;
-  .blog {
-    position: relative;
-    background-color: var(--color-grey-5);
-    border-radius: 5px;
-    box-shadow: var(--box-shadow-1);
-    transition: all 0.4s ease-in-out;
-    &:hover {
-      box-shadow: var(--box-shadow-2);
-      transform: translateY(-5px);
-      transition: all 0.4s ease-in-out;
-      img {
-        filter: grayscale(0);
-        transform: scale(1.1);
-        box-shadow: var(--box-shadow-3);
-      }
-    }
-    img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-      filter: grayscale(100%);
-      transition: all 0.4s ease-in-out;
-    }
-    .blog-text {
-      margin-top: -7px;
-      padding: 1.1rem;
-      border-top: 8px solid var(--color-secondary);
-      h4 {
-        font-size: 1.5rem;
-        margin-bottom: 0.7rem;
-        transition: all 0.4s ease-in-out;
-        cursor: pointer;
-        &:hover {
-          color: var(--color-secondary);
-        }
-      }
-      p {
-        color: var(--color-grey-2);
-        line-height: 2rem;
-        padding-bottom: 1rem;
-      }
-    }
-  }
-}
-
 .stat-title {
   text-transform: uppercase;
   font-size: 1.4rem;
@@ -388,8 +358,7 @@ section {
   }
 }
 
-//timeline
-
+/*Timeline*/
 .timeline {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -440,11 +409,12 @@ section {
   }
 }
 
-//portfolios
+//Portfolios
 .port-text {
   padding: 2rem 0;
   text-align: center;
 }
+
 .portfolios {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -476,13 +446,13 @@ section {
       transition: all 0.4s ease-in-out;
       h3 {
         font-size: 1.5rem;
-        margin-bottom: 1.5rem;
         color: var(--color-white);
+        margin-bottom: 1.5rem;
       }
       .icons {
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         .icon {
           background-color: var(--color-primary);
           border-radius: 50%;
@@ -494,7 +464,6 @@ section {
           margin: 0 1rem;
           cursor: pointer;
           transition: all 0.4s ease-in-out;
-
           i {
             font-size: 1.5rem;
             color: var(--color-white);
@@ -515,6 +484,59 @@ section {
 .portfolio-item:hover .hover-items {
   opacity: 1;
   transform: scale(1);
+}
+
+//Blogs Section
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .blog {
+    position: relative;
+    background-color: var(--color-grey-5);
+    border-radius: 5px;
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+      transform: translateY(-5px);
+      transition: all 0.4s ease-in-out;
+      img {
+        filter: grayscale(0);
+        transform: scale(1.1);
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+      }
+    }
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      filter: grayscale(100%);
+      transition: all 0.4s ease-in-out;
+    }
+    .blog-text {
+      margin-top: -7px;
+      padding: 1.1rem;
+      border-top: 8px solid var(--color-secondary);
+      h4 {
+        font-size: 1.5rem;
+        margin-bottom: 0.7rem;
+        transition: all 0.4s ease-in-out;
+        cursor: pointer;
+        &:hover {
+          color: var(--color-secondary);
+        }
+      }
+      p {
+        color: var(--color-grey-2);
+        line-height: 2rem;
+        padding-bottom: 1rem;
+      }
+    }
+  }
 }
 
 //Contact section
@@ -605,7 +627,7 @@ section {
         resize: none;
       }
     }
-    .i-control-2 {
+    .i-c-2 {
       display: flex;
       :last-child {
         margin-left: 1.5rem;
@@ -618,10 +640,8 @@ section {
   }
 }
 
-// Indipendent components //
-
-//btn
-.btn-container {
+/*Independed components*/
+.btn-con {
   display: flex;
   align-self: flex-start;
 }
@@ -633,7 +653,6 @@ section {
   border: 1px solid var(--color-secondary);
   display: flex;
   align-self: flex-start;
-  display: flex;
   align-items: center;
   overflow: hidden;
   .btn-text {
@@ -653,20 +672,21 @@ section {
     top: 0;
     right: 0;
     transform: translateX(100%);
-    transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-out;
     z-index: -1;
   }
   &:hover {
+    transition: all 0.4s ease-out;
     &::before {
       width: 100%;
       height: 100%;
       background-color: var(--color-secondary);
       transform: translateX(0);
+      transition: all 0.4s ease-out;
     }
   }
 }
 
-//title
 .main-title {
   text-align: center;
   h2 {
@@ -686,7 +706,9 @@ section {
       z-index: -1;
       transform: translate(-50%, -50%);
       font-weight: 800;
-      font-size: 4.8rem;
+      font-size: 6.3rem;
     }
   }
 }
+
+@import "./media";
